@@ -157,7 +157,7 @@ function pts_version_codenames()
 }
 
 pts_define('PTS_VERSION', '5.4.0m4');
-pts_define('PTS_CORE_VERSION', 5340);
+pts_define('PTS_CORE_VERSION', 5341);
 pts_define('PTS_CODENAME', 'LIPKI');
 pts_define('PTS_IS_CLIENT', (defined('PTS_MODE') && strstr(PTS_MODE, 'CLIENT') !== false));
 pts_define('PTS_IS_WEB_CLIENT', (defined('PTS_MODE') && PTS_MODE == 'WEB_CLIENT'));
